# cookbook-fastapi

./: README.md  docker-compose.dev.yml  pyproject.toml  settings.py
alembic/: env.py
cookbook-fastapi/models/: __init__.py  ingredient.py  recipe.py  recipe_ingredients.py
cookbook/models/: __init__.py  recipe.py  recipe_ingredients.py
