[project]
name = "cookbook"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy H",email = "dobroid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standart] (>=0.46.0,<0.47.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
